[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.8", features = ["csr"] }
console_log = "1.0.0"
log = "0.4"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.2", features = ["futures"] }
uuid = { version = "1.4.1", features = ["v4", "js"] }
